[package]
name = "kls"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
incremental = false
